y.output
Terminals which are not used

   LSB
   RSB


Grammar

    0 $accept: program $end

    1 program: external_declaration
    2        | program external_declaration

    3 external_declaration: function_definition
    4                     | declaration_stat

    5 function_definition: type function_declarator compound_stat

    6 function_declarator: ID LB RB
    7                    | ID LB param_list RB

    8 param_list: param_declaration
    9           | param_list COMMA param_declaration

   10 param_declaration: type ID

   11 compound_stat: LCB RCB
   12              | LCB stats RCB

   13 stats: stat stats
   14      | stat

   15 stat: declaration_stat
   16     | compound_stat
   17     | expression_stat
   18     | selection_stat
   19     | iteration_stat
   20     | jump_stat
   21     | print_func

   22 declaration_stat: type ID ASGN initializer SEMICOLON
   23                 | type ID SEMICOLON

   24 type: INT
   25     | FLOAT
   26     | BOOL
   27     | STRING
   28     | VOID

   29 initializer: assignment_expression

   30 constant: I_CONST
   31         | F_CONST
   32         | QUOTA STR_CONST QUOTA
   33         | TRUE
   34         | FALSE

   35 print_func: PRINT LB expression RB SEMICOLON

   36 selection_stat: IF LB expression RB stat
   37               | IF LB expression RB stat ELSE stat

   38 expression_stat: SEMICOLON
   39                | expression SEMICOLON

   40 expression: assignment_expression

   41 assignment_expression: logical_or_experssion
   42                      | ID assignment_operator assignment_expression

   43 assignment_operator: ASGN
   44                    | ADDASGN
   45                    | SUBASGN
   46                    | MULASGN
   47                    | DIVASGN
   48                    | MODASGN

   49 logical_or_experssion: logical_and_experssion
   50                      | logical_or_experssion OR logical_and_experssion

   51 logical_and_experssion: equality_expression
   52                       | logical_and_experssion AND equality_expression

   53 equality_expression: relational_expression
   54                    | equality_expression EQ relational_expression
   55                    | equality_expression NE relational_expression

   56 relational_expression: additive_expression
   57                      | relational_expression LT additive_expression
   58                      | relational_expression MT additive_expression
   59                      | relational_expression LTE additive_expression
   60                      | relational_expression MTE additive_expression

   61 additive_expression: multiplicative_expression
   62                    | additive_expression ADD multiplicative_expression
   63                    | additive_expression SUB multiplicative_expression

   64 multiplicative_expression: unary_expression
   65                          | multiplicative_expression MUL unary_expression
   66                          | multiplicative_expression DIV unary_expression
   67                          | multiplicative_expression MOD unary_expression

   68 unary_expression: postfix_expression
   69                 | INC unary_expression
   70                 | DEC unary_expression
   71                 | NOT unary_expression
   72                 | ADD unary_expression
   73                 | SUB unary_expression

   74 postfix_expression: primary_expression
   75                   | postfix_expression LB RB
   76                   | postfix_expression LB argument_expression_list RB
   77                   | postfix_expression INC
   78                   | postfix_expression DEC

   79 argument_expression_list: assignment_expression
   80                         | argument_expression_list COMMA assignment_expression

   81 primary_expression: ID
   82                   | constant
   83                   | LB expression RB

   84 iteration_stat: WHILE LB expression RB stat
   85               | FOR LB expression_stat expression_stat RB stat
   86               | FOR LB expression_stat expression_stat expression RB stat
   87               | FOR LB declaration_stat expression_stat RB stat
   88               | FOR LB declaration_stat expression_stat expression RB stat

   89 jump_stat: BREAK SEMICOLON
   90          | CONTINUE SEMICOLON
   91          | RTN SEMICOLON
   92          | RTN expression SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
PRINT (258) 35
IF (259) 36 37
ELSE (260) 37
FOR (261) 85 86 87 88
WHILE (262) 84
SEMICOLON (263) 22 23 35 38 39 89 90 91 92
COMMA (264) 9 80
INC (265) 69 77
DEC (266) 70 78
ASGN (267) 22 43
ADDASGN (268) 44
SUBASGN (269) 45
MULASGN (270) 46
DIVASGN (271) 47
MODASGN (272) 48
LT (273) 57
MT (274) 58
LTE (275) 59
MTE (276) 60
EQ (277) 54
NE (278) 55
AND (279) 52
OR (280) 50
NOT (281) 71
RTN (282) 91 92
CONTINUE (283) 90
BREAK (284) 89
LB (285) 6 7 35 36 37 75 76 83 84 85 86 87 88
RB (286) 6 7 35 36 37 75 76 83 84 85 86 87 88
LSB (287)
RSB (288)
LCB (289) 11 12
RCB (290) 11 12
QUOTA (291) 32
STR_CONST (292) 32
INT (293) 24
FLOAT (294) 25
BOOL (295) 26
VOID (296) 28
STRING (297) 27
LOWER_THAN_ELSE (298)
SUB (299) 63 73
ADD (300) 62 72
MOD (301) 67
DIV (302) 66
MUL (303) 65
I_CONST (304) 30
F_CONST (305) 31
TRUE (306) 33
FALSE (307) 34
ID (308) 6 7 10 22 23 42 81


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
program (55)
    on left: 1 2, on right: 0 2
external_declaration (56)
    on left: 3 4, on right: 1 2
function_definition (57)
    on left: 5, on right: 3
function_declarator (58)
    on left: 6 7, on right: 5
param_list (59)
    on left: 8 9, on right: 7 9
param_declaration (60)
    on left: 10, on right: 8 9
compound_stat (61)
    on left: 11 12, on right: 5 16
stats (62)
    on left: 13 14, on right: 12 13
stat (63)
    on left: 15 16 17 18 19 20 21, on right: 13 14 36 37 84 85 86 87
    88
declaration_stat (64)
    on left: 22 23, on right: 4 15 87 88
type (65)
    on left: 24 25 26 27 28, on right: 5 10 22 23
initializer (66)
    on left: 29, on right: 22
constant (67)
    on left: 30 31 32 33 34, on right: 82
print_func (68)
    on left: 35, on right: 21
selection_stat (69)
    on left: 36 37, on right: 18
expression_stat (70)
    on left: 38 39, on right: 17 85 86 87 88
expression (71)
    on left: 40, on right: 35 36 37 39 83 84 86 88 92
assignment_expression (72)
    on left: 41 42, on right: 29 40 42 79 80
assignment_operator (73)
    on left: 43 44 45 46 47 48, on right: 42
logical_or_experssion (74)
    on left: 49 50, on right: 41 50
logical_and_experssion (75)
    on left: 51 52, on right: 49 50 52
equality_expression (76)
    on left: 53 54 55, on right: 51 52 54 55
relational_expression (77)
    on left: 56 57 58 59 60, on right: 53 54 55 57 58 59 60
additive_expression (78)
    on left: 61 62 63, on right: 56 57 58 59 60 62 63
multiplicative_expression (79)
    on left: 64 65 66 67, on right: 61 62 63 65 66 67
unary_expression (80)
    on left: 68 69 70 71 72 73, on right: 64 65 66 67 69 70 71 72 73
postfix_expression (81)
    on left: 74 75 76 77 78, on right: 68 75 76 77 78
argument_expression_list (82)
    on left: 79 80, on right: 76 80
primary_expression (83)
    on left: 81 82 83, on right: 74
iteration_stat (84)
    on left: 84 85 86 87 88, on right: 19
jump_stat (85)
    on left: 89 90 91 92, on right: 20


state 0

    0 $accept: . program $end

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    BOOL    shift, and go to state 3
    VOID    shift, and go to state 4
    STRING  shift, and go to state 5

    program               go to state 6
    external_declaration  go to state 7
    function_definition   go to state 8
    declaration_stat      go to state 9
    type                  go to state 10


state 1

   24 type: INT .

    $default  reduce using rule 24 (type)


state 2

   25 type: FLOAT .

    $default  reduce using rule 25 (type)


state 3

   26 type: BOOL .

    $default  reduce using rule 26 (type)


state 4

   28 type: VOID .

    $default  reduce using rule 28 (type)


state 5

   27 type: STRING .

    $default  reduce using rule 27 (type)


state 6

    0 $accept: program . $end
    2 program: program . external_declaration

    $end    shift, and go to state 11
    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    BOOL    shift, and go to state 3
    VOID    shift, and go to state 4
    STRING  shift, and go to state 5

    external_declaration  go to state 12
    function_definition   go to state 8
    declaration_stat      go to state 9
    type                  go to state 10


state 7

    1 program: external_declaration .

    $default  reduce using rule 1 (program)


state 8

    3 external_declaration: function_definition .

    $default  reduce using rule 3 (external_declaration)


state 9

    4 external_declaration: declaration_stat .

    $default  reduce using rule 4 (external_declaration)


state 10

    5 function_definition: type . function_declarator compound_stat
   22 declaration_stat: type . ID ASGN initializer SEMICOLON
   23                 | type . ID SEMICOLON

    ID  shift, and go to state 13

    function_declarator  go to state 14


state 11

    0 $accept: program $end .

    $default  accept


state 12

    2 program: program external_declaration .

    $default  reduce using rule 2 (program)


state 13

    6 function_declarator: ID . LB RB
    7                    | ID . LB param_list RB
   22 declaration_stat: type ID . ASGN initializer SEMICOLON
   23                 | type ID . SEMICOLON

    SEMICOLON  shift, and go to state 15
    ASGN       shift, and go to state 16
    LB         shift, and go to state 17


state 14

    5 function_definition: type function_declarator . compound_stat

    LCB  shift, and go to state 18

    compound_stat  go to state 19


state 15

   23 declaration_stat: type ID SEMICOLON .

    $default  reduce using rule 23 (declaration_stat)


state 16

   22 declaration_stat: type ID ASGN . initializer SEMICOLON

    INC      shift, and go to state 20
    DEC      shift, and go to state 21
    NOT      shift, and go to state 22
    LB       shift, and go to state 23
    QUOTA    shift, and go to state 24
    SUB      shift, and go to state 25
    ADD      shift, and go to state 26
    I_CONST  shift, and go to state 27
    F_CONST  shift, and go to state 28
    TRUE     shift, and go to state 29
    FALSE    shift, and go to state 30
    ID       shift, and go to state 31

    initializer                go to state 32
    constant                   go to state 33
    assignment_expression      go to state 34
    logical_or_experssion      go to state 35
    logical_and_experssion     go to state 36
    equality_expression        go to state 37
    relational_expression      go to state 38
    additive_expression        go to state 39
    multiplicative_expression  go to state 40
    unary_expression           go to state 41
    postfix_expression         go to state 42
    primary_expression         go to state 43


state 17

    6 function_declarator: ID LB . RB
    7                    | ID LB . param_list RB

    RB      shift, and go to state 44
    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    BOOL    shift, and go to state 3
    VOID    shift, and go to state 4
    STRING  shift, and go to state 5

    param_list         go to state 45
    param_declaration  go to state 46
    type               go to state 47


state 18

   11 compound_stat: LCB . RCB
   12              | LCB . stats RCB

    PRINT      shift, and go to state 48
    IF         shift, and go to state 49
    FOR        shift, and go to state 50
    WHILE      shift, and go to state 51
    SEMICOLON  shift, and go to state 52
    INC        shift, and go to state 20
    DEC        shift, and go to state 21
    NOT        shift, and go to state 22
    RTN        shift, and go to state 53
    CONTINUE   shift, and go to state 54
    BREAK      shift, and go to state 55
    LB         shift, and go to state 23
    LCB        shift, and go to state 18
    RCB        shift, and go to state 56
    QUOTA      shift, and go to state 24
    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    BOOL       shift, and go to state 3
    VOID       shift, and go to state 4
    STRING     shift, and go to state 5
    SUB        shift, and go to state 25
    ADD        shift, and go to state 26
    I_CONST    shift, and go to state 27
    F_CONST    shift, and go to state 28
    TRUE       shift, and go to state 29
    FALSE      shift, and go to state 30
    ID         shift, and go to state 31

    compound_stat              go to state 57
    stats                      go to state 58
    stat                       go to state 59
    declaration_stat           go to state 60
    type                       go to state 61
    constant                   go to state 33
    print_func                 go to state 62
    selection_stat             go to state 63
    expression_stat            go to state 64
    expression                 go to state 65
    assignment_expression      go to state 66
    logical_or_experssion      go to state 35
    logical_and_experssion     go to state 36
    equality_expression        go to state 37
    relational_expression      go to state 38
    additive_expression        go to state 39
    multiplicative_expression  go to state 40
    unary_expression           go to state 41
    postfix_expression         go to state 42
    primary_expression         go to state 43
    iteration_stat             go to state 67
    jump_stat                  go to state 68


state 19

    5 function_definition: type function_declarator compound_stat .

    $default  reduce using rule 5 (function_definition)


state 20

   69 unary_expression: INC . unary_expression

    INC      shift, and go to state 20
    DEC      shift, and go to state 21
    NOT      shift, and go to state 22
    LB       shift, and go to state 23
    QUOTA    shift, and go to state 24
    SUB      shift, and go to state 25
    ADD      shift, and go to state 26
    I_CONST  shift, and go to state 27
    F_CONST  shift, and go to state 28
    TRUE     shift, and go to state 29
    FALSE    shift, and go to state 30
    ID       shift, and go to state 69

    constant            go to state 33
    unary_expression    go to state 70
    postfix_expression  go to state 42
    primary_expression  go to state 43


state 21

   70 unary_expression: DEC . unary_expression

    INC      shift, and go to state 20
    DEC      shift, and go to state 21
    NOT      shift, and go to state 22
    LB       shift, and go to state 23
    QUOTA    shift, and go to state 24
    SUB      shift, and go to state 25
    ADD      shift, and go to state 26
    I_CONST  shift, and go to state 27
    F_CONST  shift, and go to state 28
    TRUE     shift, and go to state 29
    FALSE    shift, and go to state 30
    ID       shift, and go to state 69

    constant            go to state 33
    unary_expression    go to state 71
    postfix_expression  go to state 42
    primary_expression  go to state 43


state 22

   71 unary_expression: NOT . unary_expression

    INC      shift, and go to state 20
    DEC      shift, and go to state 21
    NOT      shift, and go to state 22
    LB       shift, and go to state 23
    QUOTA    shift, and go to state 24
    SUB      shift, and go to state 25
    ADD      shift, and go to state 26
    I_CONST  shift, and go to state 27
    F_CONST  shift, and go to state 28
    TRUE     shift, and go to state 29
    FALSE    shift, and go to state 30
    ID       shift, and go to state 69

    constant            go to state 33
    unary_expression    go to state 72
    postfix_expression  go to state 42
    primary_expression  go to state 43


state 23

   83 primary_expression: LB . expression RB

    INC      shift, and go to state 20
    DEC      shift, and go to state 21
    NOT      shift, and go to state 22
    LB       shift, and go to state 23
    QUOTA    shift, and go to state 24
    SUB      shift, and go to state 25
    ADD      shift, and go to state 26
    I_CONST  shift, and go to state 27
    F_CONST  shift, and go to state 28
    TRUE     shift, and go to state 29
    FALSE    shift, and go to state 30
    ID       shift, and go to state 31

    constant                   go to state 33
    expression                 go to state 73
    assignment_expression      go to state 66
    logical_or_experssion      go to state 35
    logical_and_experssion     go to state 36
    equality_expression        go to state 37
    relational_expression      go to state 38
    additive_expression        go to state 39
    multiplicative_expression  go to state 40
    unary_expression           go to state 41
    postfix_expression         go to state 42
    primary_expression         go to state 43


state 24

   32 constant: QUOTA . STR_CONST QUOTA

    STR_CONST  shift, and go to state 74


state 25

   73 unary_expression: SUB . unary_expression

    INC      shift, and go to state 20
    DEC      shift, and go to state 21
    NOT      shift, and go to state 22
    LB       shift, and go to state 23
    QUOTA    shift, and go to state 24
    SUB      shift, and go to state 25
    ADD      shift, and go to state 26
    I_CONST  shift, and go to state 27
    F_CONST  shift, and go to state 28
    TRUE     shift, and go to state 29
    FALSE    shift, and go to state 30
    ID       shift, and go to state 69

    constant            go to state 33
    unary_expression    go to state 75
    postfix_expression  go to state 42
    primary_expression  go to state 43


state 26

   72 unary_expression: ADD . unary_expression

    INC      shift, and go to state 20
    DEC      shift, and go to state 21
    NOT      shift, and go to state 22
    LB       shift, and go to state 23
    QUOTA    shift, and go to state 24
    SUB      shift, and go to state 25
    ADD      shift, and go to state 26
    I_CONST  shift, and go to state 27
    F_CONST  shift, and go to state 28
    TRUE     shift, and go to state 29
    FALSE    shift, and go to state 30
    ID       shift, and go to state 69

    constant            go to state 33
    unary_expression    go to state 76
    postfix_expression  go to state 42
    primary_expression  go to state 43


state 27

   30 constant: I_CONST .

    $default  reduce using rule 30 (constant)


state 28

   31 constant: F_CONST .

    $default  reduce using rule 31 (constant)


state 29

   33 constant: TRUE .

    $default  reduce using rule 33 (constant)


state 30

   34 constant: FALSE .

    $default  reduce using rule 34 (constant)


state 31

   42 assignment_expression: ID . assignment_operator assignment_expression
   81 primary_expression: ID .

    ASGN     shift, and go to state 77
    ADDASGN  shift, and go to state 78
    SUBASGN  shift, and go to state 79
    MULASGN  shift, and go to state 80
    DIVASGN  shift, and go to state 81
    MODASGN  shift, and go to state 82

    $default  reduce using rule 81 (primary_expression)

    assignment_operator  go to state 83


state 32

   22 declaration_stat: type ID ASGN initializer . SEMICOLON

    SEMICOLON  shift, and go to state 84


state 33

   82 primary_expression: constant .

    $default  reduce using rule 82 (primary_expression)


state 34

   29 initializer: assignment_expression .

    $default  reduce using rule 29 (initializer)


state 35

   41 assignment_expression: logical_or_experssion .
   50 logical_or_experssion: logical_or_experssion . OR logical_and_experssion

    OR  shift, and go to state 85

    $default  reduce using rule 41 (assignment_expression)


state 36

   49 logical_or_experssion: logical_and_experssion .
   52 logical_and_experssion: logical_and_experssion . AND equality_expression

    AND  shift, and go to state 86

    $default  reduce using rule 49 (logical_or_experssion)


state 37

   51 logical_and_experssion: equality_expression .
   54 equality_expression: equality_expression . EQ relational_expression
   55                    | equality_expression . NE relational_expression

    EQ  shift, and go to state 87
    NE  shift, and go to state 88

    $default  reduce using rule 51 (logical_and_experssion)


state 38

   53 equality_expression: relational_expression .
   57 relational_expression: relational_expression . LT additive_expression
   58                      | relational_expression . MT additive_expression
   59                      | relational_expression . LTE additive_expression
   60                      | relational_expression . MTE additive_expression

    LT   shift, and go to state 89
    MT   shift, and go to state 90
    LTE  shift, and go to state 91
    MTE  shift, and go to state 92

    $default  reduce using rule 53 (equality_expression)


state 39

   56 relational_expression: additive_expression .
   62 additive_expression: additive_expression . ADD multiplicative_expression
   63                    | additive_expression . SUB multiplicative_expression

    SUB  shift, and go to state 93
    ADD  shift, and go to state 94

    $default  reduce using rule 56 (relational_expression)


state 40

   61 additive_expression: multiplicative_expression .
   65 multiplicative_expression: multiplicative_expression . MUL unary_expression
   66                          | multiplicative_expression . DIV unary_expression
   67                          | multiplicative_expression . MOD unary_expression

    MOD  shift, and go to state 95
    DIV  shift, and go to state 96
    MUL  shift, and go to state 97

    $default  reduce using rule 61 (additive_expression)


state 41

   64 multiplicative_expression: unary_expression .

    $default  reduce using rule 64 (multiplicative_expression)


state 42

   68 unary_expression: postfix_expression .
   75 postfix_expression: postfix_expression . LB RB
   76                   | postfix_expression . LB argument_expression_list RB
   77                   | postfix_expression . INC
   78                   | postfix_expression . DEC

    INC  shift, and go to state 98
    DEC  shift, and go to state 99
    LB   shift, and go to state 100

    $default  reduce using rule 68 (unary_expression)


state 43

   74 postfix_expression: primary_expression .

    $default  reduce using rule 74 (postfix_expression)


state 44

    6 function_declarator: ID LB RB .

    $default  reduce using rule 6 (function_declarator)


state 45

    7 function_declarator: ID LB param_list . RB
    9 param_list: param_list . COMMA param_declaration

    COMMA  shift, and go to state 101
    RB     shift, and go to state 102


state 46

    8 param_list: param_declaration .

    $default  reduce using rule 8 (param_list)


state 47

   10 param_declaration: type . ID

    ID  shift, and go to state 103


state 48

   35 print_func: PRINT . LB expression RB SEMICOLON

    LB  shift, and go to state 104


state 49

   36 selection_stat: IF . LB expression RB stat
   37               | IF . LB expression RB stat ELSE stat

    LB  shift, and go to state 105


state 50

   85 iteration_stat: FOR . LB expression_stat expression_stat RB stat
   86               | FOR . LB expression_stat expression_stat expression RB stat
   87               | FOR . LB declaration_stat expression_stat RB stat
   88               | FOR . LB declaration_stat expression_stat expression RB stat

    LB  shift, and go to state 106


state 51

   84 iteration_stat: WHILE . LB expression RB stat

    LB  shift, and go to state 107


state 52

   38 expression_stat: SEMICOLON .

    $default  reduce using rule 38 (expression_stat)


state 53

   91 jump_stat: RTN . SEMICOLON
   92          | RTN . expression SEMICOLON
